--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://theultimateabsol.github.io/trump-sentiment",
+  "homepage": "https://istrumpwinning.net/",
   "name": "sentiment",
   "version": "0.1.0",
   "private": true,
